[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/right_container/right_container.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="RightContainer" type="VBoxContainer"]
anchor_top = -0.0024972
anchor_right = 1.0
anchor_bottom = 0.997503
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabsBg" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 38.0

[node name="Tabs" type="Tabs" parent="TabsBg"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 31.0
custom_styles/button = SubResource( 1 )
tab_align = 0
tab_close_display_policy = 2
drag_to_rearrange_enabled = true

[node name="Panel" type="PanelContainer" parent="."]
margin_top = 33.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="reposition_active_tab_request" from="TabsBg/Tabs" to="." method="_on_Tabs_reposition_active_tab_request"]
[connection signal="tab_changed" from="TabsBg/Tabs" to="." method="_on_Tabs_tab_changed"]
[connection signal="tab_close" from="TabsBg/Tabs" to="." method="_on_Tabs_tab_close"]
